feat: add filter for logo

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </section>
     <footer class="footer">
         <div class="footer_text"> 
-            <a href="https://rs.school/js/"><img src="/image/rs_school_js.svg" alt="rs_logo"></a>
+            <a href=".https://rs.school/js/"><img src="/image/rs_school_js.svg" alt="rs_logo" class="rs_logo"></a>
             <div class="footer_inform">
                 <span class="footer_about">RS School 2023</span> 
             </div>
