--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <span class="animate scroll" style="--i:5;"></span> 
             </div>
             <div class="textarea_field">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
                 <span class="focus"></span>
                 <span class="animate scroll" style="--i:7;"></span> 
             </div>
